PyMaker/datas/object2/RawHTML/i12601/Python_DOC_referPages.installing-ctypes-in-windows-7-rhel-6-x-python3-x.txt
<div class="post-text" itemprop="text">
<p>I was trying to install <strong>ctypes</strong> module in windows 7 python3.5 and RHEL6.x python3.3 but is not accepting with the error..</p>
<pre><code>  File "C:\Users\sawad\Downloads\ctypes-1.0.2\setup.py", line 24
    raise Exception, "ctypes %s requires Python 2.3 or better" % __version__
                   ^
SyntaxError: invalid syntax
</code></pre>
<p>and when I use python version 2.6.6 it gives the error..</p>
<pre><code>running install
running build
running build_py
running build_ext
building '_ctypes' extension
gcc -pthread -fno-strict-aliasing -O2 -g -pipe -Wall -Wp,-D_FORTIFY_SOURCE=2 -fexceptions -fstack-protector --param=ssp-buffer-size=4 -m64 -mtune=generic -D_GNU_SOURCE -fPIC -fwrapv -DNDEBUG -O2 -g -pipe -Wall -Wp,-D_FORTIFY_SOURCE=2 -fexceptions -fstack-protector --param=ssp-buffer-size=4 -m64 -mtune=generic -D_GNU_SOURCE -fPIC -fwrapv -fPIC -fPIC -Ibuild/temp.linux-x86_64-2.6/libffi/include -Ibuild/temp.linux-x86_64-2.6/libffi -I/home/sawad/ctypes-1.0.2/source/libffi/src -I/usr/include/python2.6 -c source/_ctypes.c -o build/temp.linux-x86_64-2.6/source/_ctypes.o
source/_ctypes.c:107:20: error: Python.h: No such file or directory
source/_ctypes.c:108:26: error: structmember.h: No such file or directory
</code></pre>
<p>...omitted</p>
<pre><code>source/_ctypes.c:4378: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘Pointer_as_number’
source/_ctypes.c:4392: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘Pointer_Type’
source/_ctypes.c:4537: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘*’ token
source/_ctypes.c:4546: error: expected ‘)’ before ‘*’ token
source/_ctypes.c:4570: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘*’ token
source/_ctypes.c:4632: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘init_ctypes’
error: command 'gcc' failed with exit status 1
</code></pre>
<p>I usually download the .tar.gz package then install it using "python3 setup.py install" as I don't have direct internet access in my server. So how can this work!!</p>
</div>
<div class="post-text" itemprop="text">
<p>You don't need to install ctypes <em>at all</em>; it is part of the Python standard library, as of Python 2.5 onwards. See the <a href="https://docs.python.org/3/library/ctypes.html" rel="nofollow noreferrer">module documentation</a>.</p>
<p><code>ctypes</code> 1.0.2 is ancient, don't use it. It was written for Python 2.3 and 2.4 and was never adjusted to run on Python 3, which is why you get the syntax error. You got the errors with Python 2 because you are missing the Python development headers (provided by the <code>python-devel</code> RPM).</p>
</div>
<span class="comment-copy">You don't need to install ctypes; it is part of the standard library, as of Python 2.5 onwards. <code>ctypes</code> 1.0.2 is ancient, don't use it.</span>
